# TumblechatV2

./: .gitignore  README.md  Shared.props  TumblechatV2.slnx  TumblechatV2.vcxproj  gui_client_v2.cpp
cryptopp/: cryptlib.vcxproj
src/QtGUI/QtTumblechat/: CMakeLists.txt  chatwidget.cpp  chatwidget.h  connectiondialog.cpp  connectiondialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  sessionbridge.cpp  sessionbridge.h  stunworker.cpp  stunworker.h
src/core/: logger.h  result.h  types.h
src/crypto/: crypto_engine.h
src/network/: frame_io.h  socket_wrapper.h  tcp_transport.h  transport.h  udp_hole_punch.h  udp_transport.cpp  udp_transport.h
src/session/: connection_manager.h  session.h
